[package]
name = "cloud-console"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
axum = { version = "0.5", features = ["ws"] }
futures = "0.3"
rust-embed = "6.4.2"
mime_guess = "2"
tower-http = { version = "0.3", features = ["compression-gzip"] }
